package Model;

public class Supplier extends Contractor {
    public Supplier(long ID, String name) {
        super(ID, name);
    }
}
