@startuml
class Model.Supplier {
}
class Model.Position {
~ long ID
- String name
- ArrayList<Permission> permissions
- boolean isActive
+ void addPermission(Permission)
+ boolean hasPermissions(Permission)
+ void removePermissions(Permission)
+ String getName()
+ void setName(String)
+ ArrayList<Permission> getPermissions()
+ void setPermissions(ArrayList<Permission>)
+ long getID()
+ String toString()
+ Position clone()
}
class Model.StorageItem {
~ long ID
- TypeOfStorageItem type
- Cell locationOnStorage
- Supplier supplier
- Customer customer
+ long getID()
+ void setID(long)
+ TypeOfStorageItem getType()
+ void setType(TypeOfStorageItem)
+ Cell getLocationOnStorage()
+ void setLocationOnStorage(Cell)
+ Supplier getSupplier()
+ void setSupplier(Supplier)
+ Customer getCustomer()
+ void setCustomer(Customer)
}
abstract class Model.Receipt {
- long ID
- LocalDate date
- User performer
- User author
- String invoiceNumberField
- ArrayList<ListOfReceipt> lists
- boolean isProduct
+ long getID()
+ LocalDate getDate()
+ User getPerformer()
+ User getAuthor()
+ String getInvoiceNumberField()
+ ArrayList<ListOfReceipt> getLists()
+ void setLists(ArrayList<ListOfReceipt>)
+ boolean isProduct()
+ void setProduct(boolean)
}
class Model.Receipt$ListOfReceipt {
~ long ID
~ StorageItem item
~ Integer amount
~ Cell cell
~ Receipt receipt
+ long getID()
+ void setID(long)
+ StorageItem getItem()
+ void setItem(StorageItem)
+ Integer getAmount()
+ void setAmount(Integer)
+ Cell getCell()
+ void setCell(Cell)
+ Receipt getReceipt()
+ void setReceipt(Receipt)
}
enum Model.Permission {
+  EditingUsersAndPositions
+  EditingWarehouseInformation
+  ProductEditing
+  ProductLogistic
+  EditingContactor
+  ViewBook
}
class Model.ReceiptMovement {
~ ArrayList<ListOfReceiptMovement> list
+ ArrayList<ListOfReceiptMovement> getListMovement()
+ void setListMovement(ArrayList<ListOfReceiptMovement>)
}
class Model.ReceiptMovement$ListOfReceiptMovement {
- Cell where
+ Cell getFrom()
+ Cell getWhere()
+ void setWhere(Cell)
+ void setFrom(Cell)
}
class Model.ReceiptSupply {
~ Supplier supplier
+ Supplier getSupplier()
+ void setSupplier(Supplier)
}
class Model.GroupItems {
~ long ID
~ String name
~ GroupItems parent
~ boolean isProduct
+ long getID()
+ void setID(long)
+ String getName()
+ void setName(String)
+ GroupItems getParent()
+ void setParent(GroupItems)
+ boolean isProduct()
+ void setProduct(boolean)
+ String toString()
}
class Model.TypeOfStorageItem {
- long ID
- String name
- GroupItems groupItems
- double weight
- boolean isProduct
- boolean isActive
+ String getName()
+ void setName(String)
+ long getID()
+ GroupItems getGroup()
+ void setGroup(GroupItems)
+ double getWeight()
+ void setWeight(double)
+ boolean isProduct()
+ void setProduct(boolean)
+ boolean isActive()
+ void setActive(boolean)
+ String toString()
}
class Model.ReceiptDispatch {
~ Customer customer
+ Customer getCustomer()
+ void setCustomer(Customer)
}
class Model.Cell {
- Long ID
- double currentWeight
- String name
- ArrayList<StorageItem> stored
- boolean isActive
- double maxWeight
- WarehouseZone zone
+ boolean addProductsAll(ArrayList<StorageItem>)
+ boolean addProduct(StorageItem)
+ void removeItem(StorageItem)
+ void setName(String)
+ long getID()
+ double getCurrentWeight()
+ String getName()
+ boolean isActive()
+ void setActive(boolean)
+ WarehouseZone getZone()
+ double getMaxWeight()
+ ArrayList<StorageItem> getStored()
+ String toString()
}
abstract class Model.Contractor {
- long ID
- String name
- String address
- String information
- String passport
- String phone
- String bankRequisites
- String IIN
- String KPP
- boolean isActive
+ long getID()
+ String getName()
+ void setName(String)
+ String getAddress()
+ void setAddress(String)
+ String getInformation()
+ void setInformation(String)
+ String getPassport()
+ void setPassport(String)
+ String getPhone()
+ void setPhone(String)
+ String getBankRequisites()
+ void setBankRequisites(String)
+ String getIIN()
+ void setIIN(String)
+ String getKPP()
+ void setKPP(String)
+ boolean isActive()
+ void setActive(boolean)
+ String toString()
+ Contractor clone()
}
class Model.User {
- Long ID
- String name
- Position position
- String login
- String password
- boolean isActive
+ void setName(String)
+ String getName()
+ Long getID()
+ Position getPosition()
+ void setPosition(Position)
+ String getLogin()
+ void setLogin(String)
+ String getPassword()
+ void setPassword(String)
+ boolean isActive()
+ void setActive(boolean)
+ String toString()
}
class Model.WarehouseZone {
- Long ID
- String zoneName
- Cell[][] cells
- boolean isActive
- boolean isProductZone
- Double maxWeight
+ String getZoneName()
+ void setZoneName(String)
+ Cell[][] getCells()
+ void setCells(Cell[][])
+ Long getID()
+ boolean isActive()
+ void setActive(boolean)
+ boolean isProductZone()
+ Double getMaxWeight()
+ void setProductZone(boolean)
+ String toString()
}
class Model.Customer {
}


Model.Contractor <|-- Model.Supplier
Model.Cloneable <|.. Model.Position
Model.Receipt +.. Model.Receipt$ListOfReceipt
Model.Receipt <|-- Model.ReceiptMovement
Model.ReceiptMovement +.. Model.ReceiptMovement$ListOfReceiptMovement
Model.ListOfReceipt <|-- Model.ReceiptMovement$ListOfReceiptMovement
Model.Receipt <|-- Model.ReceiptSupply
Model.Receipt <|-- Model.ReceiptDispatch
Model.Cloneable <|.. Model.Contractor
Model.Contractor <|-- Model.Customer
@enduml